// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-posinset={2}
  className="pickerRow container align-items-center"
  role="option"
>
  <div
    className="flexCell cell size-36 padding-12 padding-left-12 align-widgets-top"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly with extra props 1`] = `
<div
  aria-posinset={2}
  aria-selected={true}
  className="pickerRow -clickable uui-focus container -clickable align-items-center"
  onClick={[Function]}
  role="option"
>
  <div
    className="flexCell cell size-48 padding-24 padding-left-24 align-widgets-top"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
      <div
        className="iconWrapper"
      >
        <button
          className="container uui-button-box uui-enabled root color-sky"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={null}
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#notification-done-18.svg"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
